# Leaf

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: TODO.md  design_notes.md
examples/: Example.leaf
scripts/: build_and_run.bat  build_and_run.sh
src/: main.c
